Connection to MongoDB Atlas Cloud

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-
+spring.data.mongodb.uri=mongodb+srv://${mongoDB.user}:${mongoDB.password}@democluster-upzbn.mongodb.net/test?retryWrites=true&w=majority
